--- a/www/swarmtv/css/main.css
+++ b/www/swarmtv/css/main.css
@@ -22,19 +22,19 @@ textarea {
     color: #222;
 }
 
-A:link {color:#66c; font-weight:bold; text-decoration:none;}
+A:link {color:#c90; font-weight:bold; text-decoration:none;}
 
-A:visited {color:#339; font-weight:bold; text-decoration:none;}
+A:visited {color:#960; font-weight:bold; text-decoration:none;}
 
-A:hover {color:#99f; font-weight:bold; text-decoration:none;}
+A:hover {color:#fc3; font-weight:bold; text-decoration:none;}
 
 A:active {text-decoration:none;}
 
-a.navbar:link {color:#66c; text-decoration:none; font-weight: bold;}
+a.navbar:link {color:#c90; text-decoration:none; font-weight: bold;}
 
-a.navbar:visited {color:#339; text-decoration:none; font-weight: bold;}
+a.navbar:visited {color:#960; text-decoration:none; font-weight: bold;}
 
-a.navbar:hover {color:#99f; text-decoration:none; font-weight:bold;}
+a.navbar:hover {color:#fc3; text-decoration:none; font-weight:bold;}
 
 
 body {
