ensures that text boxes in FIrefox are content editable

--- a/www/swarmtv/css/main.css
+++ b/www/swarmtv/css/main.css
@@ -9,8 +9,8 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
-* {
-     -moz-user-select: none; // mozilla browsers
+ {
+     /*-moz-user-select: none; // mozilla browsers*/
      -khtml-user-select: none; // webkit browsers
 }
 
