--- a/www/swarmtv/css/main.css
+++ b/www/swarmtv/css/main.css
@@ -80,7 +80,8 @@ a#main_home_button:hover{
 	color:#fff;
 }
 
-#add_element_form{
+#add_element_form,
+#page_info_form {
 	width:465px;
 	color:#006; 
 	background-color:#e0e0f0; 
@@ -94,43 +95,66 @@ a#main_home_button:hover{
 	vertical-align:top;
 } 
       
-#add_element_form h2 { 
+#add_element_form h2,
+#page_info_form h2 { 
 	font-size:30px; 
-	font-weight:bold;    
+	font-weight:bold;
     margin-top:0px;  
 	vertical-align:top;
+} 
+
+#pageKeywords,
+#element_file {
+   border: 1px solid #e0e0f0; 
+   -webkit-border-radius:5px; 
+   -moz-border-radius:5px; 
+   border-radius:5px; 
+   height:25px; 
+   line-height:25px; 
+   width:300px; 
+   text-indent:5px; 
+} 
+#pageKeywords:focus,
+#element_file:focus {
+	border: 1px solid #006;  
+	background-color: #f8f8ff;   
 }
 
-#add_element_form input {    
-    font-size:13px;
-	border: #006;  
-	background-color: #f8f8ff; 
-}
-
-#add_element_form label {  
+#add_element_form label,
+#page_info_form label {  
 	display:block;  
 }
 
-#add_element_form textarea {  
-        width:450px;  
-        font-size:15px;   
-        margin-bottom:10px;  
-        padding:4px;   
-        height:150px;  
-        resize: vertical;
+#add_element_form textarea,
+#page_info_form textarea {  
+	width:450px;  
+	font-size:15px;   
+	margin-bottom:10px;  
+	padding:4px;   
+	height:150px;  
+	resize: vertical;
+	border:1px solid #e0e0f0; 
+	-webkit-border-radius:5px; 
+	-moz-border-radius:5px; 
+	border-radius:5px; 
+	line-height:25px;
+	text-indent:5px; 
 }
 
-#add_element_form textarea:focus {  
+#add_element_form textarea:focus,
+#page_info_form textarea:focus {  
 	border: 1px solid #006;  
 	background-color: #f8f8ff;  
 }  
 
-#add_element_form label{ 
+#add_element_form label,
+#page_info_form label{ 
         font-size:15px; 
 }
  
-#add_element_form #submit_element {  
-	width: 70px;
+#add_element_form .submit_element,
+#page_info_form .submit_element {  
+	width: 85px;
 	height: 25px;  
 	font-weight:bold; 
 	color:#ccc;  
@@ -144,11 +168,13 @@ a#main_home_button:hover{
 	border-radius:8px;  
 }  
       
-#add_element_form #submit_element:hover {  
+#add_element_form .submit_element:hover,
+#page_info_form .submit_element:hover {  
 	color: #fff;  
 }  
   
-#add_element_form #submit_element:active {  
+#add_element_form .submit_element:active,
+#page_info_form .submit_element:active {  
 	position:relative;  
 	top:1px;  
 }
@@ -157,14 +183,15 @@ a#main_home_button:hover{
 /*
  *	pages_view
  */
-#background{
+#background {
 	position:absolute;
 	left:0px;
 	top:0px;
 	width:100%;
 	height:100%;
-	z-index:1;
-	color:#ffffff;
+	padding:20px;
+	z-index:0;
+	color:#fff;
 }
 
 body {
@@ -298,13 +325,19 @@ img {
 	margin:20px 10px 30px 10px;
 }
 
-#page_info_form_triger{
-	padding:10px;
+#page_title_wrapper{
+	width:300px;
+	position:absolute;
+	padding:20px;
+	left:10px;
+	top:10px;
+	z-index:2000;
 	background-color:transparent;
-	width:100%;
+	overflow:visible;
+	color: #eee;
 }
 
-#page_info_form_triger:hover {
+#page_title_wrapper:hover {
 	cursor:hand; cursor:pointer;
 	border-width:1px;
 	border-color:#ccc;
@@ -316,7 +349,7 @@ img {
 	position:absolute;
 	left:10px;
 	top:10px;
-	z-index:2;
+	z-index:2000;
 	background-color:transparent;
 }
 
@@ -325,7 +358,7 @@ img {
 	padding:0px;
 }
 
-#submit_element{
+#submit_element {
   float:right;
 }
 
