--- a/www/swarmtv/css/main.css
+++ b/www/swarmtv/css/main.css
@@ -298,7 +298,7 @@ img {
 }
 
 #page_title_wrapper{
-	width:300px;
+	width:400px;
 	position:absolute;
 	padding:20px;
 	left:10px;
@@ -328,6 +328,24 @@ img {
 #page_title{
 	margin:0px;
 	padding:0px;
+}
+
+#recentChanges{
+	width:500px;
+	position:absolute;
+	left:260px;
+	top:100px;
+	z-index:2000;
+	background-color:transparent;
+}
+
+#recentChangesTitle{
+	display:block;
+	position:fixed;
+	left:20px;
+	top:20px;
+	color:#ccc;
+	width:auto;
 }
 
 #submit_element {
