--- a/www/swarmtv/css/main.css
+++ b/www/swarmtv/css/main.css
@@ -174,12 +174,11 @@ body {
 	top:0px;
 	width:100%;
 	height:100%;
-	background-image:url(../img/default_background.jpg);
-	background-color:#000033;
-	-webkit-background-size: cover;
+	background: #000033 url(../img/default_background.jpg) center center fixed no-repeat;
 	-moz-background-size: cover;
-	-o-background-size: cover;
 	background-size: cover;
+	-webkit-background-size: cover;
+	-o-background-size: cover;
 	z-index:1;
 	color:#ccc;
 	padding:2em;
