--- a/www/swarmtv/css/videoPlayer.css
+++ b/www/swarmtv/css/videoPlayer.css
@@ -15,7 +15,7 @@
 a.videoLink {
 	display: block;
 	margin: 20px;
-	width: 200px;
+	//width: 200px;
 	height: 115px;
 	float: center;
 	position: relative;
