--- a/www/swarmtv/css/videoPlayer.css
+++ b/www/swarmtv/css/videoPlayer.css
@@ -27,7 +27,7 @@ a.videoLink {
 a.videoLink img.play { position: absolute; top: 25px; left: 75px; }
 a.videoLink div.caption {
 	position: absolute; width: 180px; bottom: 0px; padding: 10px; color: #fff; background-color: rgba(0,0,0,.5);
-	font-family: Arial; font-size: 12px; text-align:center
+	font-family: Arial; font-size: 12px; text-align:center;
 }
 a.videoLink:hover { border-color: #fff; }
 
